kubernetes/searchingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: search-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: searchproxy-svc
          servicePort: 3001
